...
import Reachability
import SwiftUI

enum ScreenId: ScreenIdentifierProtocol, Codable {
    case host
    case connectivity
    case ping
    case viewSource
    case device
    case settings
    case showMore

    var body: some View {
...
            return Image("Source").renderingMode(.template)
        case .device:
            return Image("Device").renderingMode(.template)
        case .settings:
            return Image("Settings").renderingMode(.template)
        case .showMore:
            return Image("More").renderingMode(.template)
        }
    }

    var selectedTabImage: Image {
        switch self {
        case .host:
...
