...
                                return
                            }
                        }
                    }
                },
                defaultText: defaultUrl,
                goText: "Lookup",
                isQuerying: $model.isQuerying,
                cancel: cancel
            )
        }
        .background(Color(UIColor.systemGroupedBackground))
        .navigationBarTitle("Host Information", displayMode: .inline)
...
